# get-weather-on-c

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  build_mingw.sh  main.c  openweather_map_account.json.sample
lib/http_connector/: http_connector.c  http_connector.h
src/: main.c
src/lib/http_connector/: Makefile  http_connector.c  http_connector.h
src/lib/openweathermap_client/: openweather.c  openweather.h
src/main/: Makefile  main.c  openweather.h
